# TheVulkanProject

./: .gitignore  AnotherVulkanTypes.hpp  Camera.cpp  Camera.hpp  ClearRenderpass.cpp  ClearRenderpass.hpp  Constants.hpp  Engine.cpp  Engine.hpp  FinalRenderpass.cpp  FinalRenderpass.hpp  Input.cpp  Input.hpp  Main.cpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  RendererTypes.hpp  RenderpassBase.cpp  RenderpassBase.hpp  SceneRenderpass.cpp  SceneRenderpass.hpp  TODO.md  Texture.hpp  VulkanCommon.hpp  VulkanConstants.hpp  VulkanRenderpassBuilder.cpp  VulkanRenderpassBuilder.hpp  capture_settings.cap  meson.build
Rendering/: BufferObject.hpp  CommandExecutor.cpp  CommandExecutor.hpp  Common.hpp  FramebuffersBuilder.cpp  FramebuffersBuilder.hpp  ImageObject.cpp  ImageObject.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  PipelineBuilder.cpp  Renderer.cpp  Renderer.hpp  RenderingDevice.cpp  RenderingDevice.hpp  RenderingObjectsFactory.cpp  RenderingObjectsFactory.hpp  RenderingResourcesManager.cpp  RenderingResourcesManager.hpp  RenderpassBuilder.cpp  RenderpassBuilder.hpp  Swapchain.cpp  Swapchain.hpp  VulkanCommandExecutor.cpp  VulkanCommandExecutor.hpp  VulkanFramebuffersBuilder.cpp  VulkanFramebuffersBuilder.hpp  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.hpp  VulkanPipelineBuilder.cpp  VulkanPipelineBuilder.hpp  VulkanRenderpassBuilder.cpp  VulkanRenderpassBuilder.hpp
Rendering/Objects/: BufferObject.cpp  BufferObject.hpp  DescriptorSetObject.cpp  DescriptorSetObject.hpp  FenceObject.cpp  FenceObject.hpp  ImageObject.cpp  ImageObject.hpp  ImageViewObject.cpp  ImageViewObject.hpp  RenderingLayoutObject.cpp  RenderingLayoutObject.hpp  SemaphoreObject.cpp  SemaphoreObject.hpp
Rendering/Renderpasses/: ClearRenderpass.cpp  ClearRenderpass.hpp  FinalRenderpass.cpp  FinalRenderpass.hpp  ImguiRenderpass.cpp  ImguiRenderpass.hpp  RenderpassBase.cpp  RenderpassBase.hpp  SceneRenderpass.cpp  SceneRenderpass.hpp  SkyboxRenderpass.cpp  SkyboxRenderpass.hpp
data/: resources.json
data/scenes/: scene1.json
data/shaders/: composition.frag  default.frag  default.vert  scene-model.frag  scene_composition.frag  shadow.frag  shadow.vert  skybox.frag
shaders/: default.frag  default.frag.spv  default.vert  default.vert.spv
src/: Constants.hpp  DebugUI.cpp  DebugUI.hpp  Engine.cpp  Engine.hpp  Input.cpp  Input.hpp  Main.cpp  Math.hpp  Mesh.hpp  Object.cpp  Object.hpp
src/Debug/: DebugUI.cpp  DebugUI.hpp  DebugUIRenderStage.cpp  DebugUIRenderStage.hpp  DebugUIRoot.cpp  DebugUIRoot.hpp  DebugUIState.hpp  Strings.hpp
src/Debug/UI/: LogWindow.cpp  LogWindow.hpp  MainMenuBar.cpp  MainMenuBar.hpp  ObjectEditVisitor.cpp  ObjectEditVisitor.hpp  ObjectEditorWindow.cpp  ObjectEditorWindow.hpp  ResourcesListWindow.cpp  ResourcesListWindow.hpp  SceneTreeWindow.cpp  SceneTreeWindow.hpp  ShaderCodeEditorWindow.cpp  ShaderCodeEditorWindow.hpp  VariablesWindow.cpp  VariablesWindow.hpp  WindowBase.hpp
src/Engine/: Engine.cpp  Engine.hpp  EngineError.cpp  EngineError.hpp  EngineVars.cpp  EngineVars.hpp  InputProcessor.cpp  InputProcessor.hpp  Log.cpp  Log.hpp  LogCategory.hpp  VarCollection.cpp  VarCollection.hpp  Vars.hpp
src/Events/: Event.cpp  Event.hpp  EventHandlerIdx.hpp  EventQueue.cpp  EventQueue.hpp
src/Input/: Input.cpp
src/Math/: Math.hpp
src/Objects/: Camera.cpp  Camera.hpp  Light.cpp  Light.hpp  LightSource.cpp  LightSource.hpp  LightSourceType.cpp  LightSourceType.hpp  Object.cpp  Object.hpp  Prop.cpp  Prop.hpp  Skybox.cpp  Skybox.hpp  World.cpp  World.hpp
src/Objects/Components/: Component.cpp  Component.hpp  IComponent.hpp  ModelComponent.cpp  ModelComponent.hpp  PositionComponent.cpp  PositionComponent.hpp  SkyboxComponent.cpp  SkyboxComponent.hpp
src/Objects/Data/: DataType.hpp  IData.hpp  RenderData.hpp  RenderingData.cpp  RenderingData.hpp
src/Rendering/: CommandExecution.cpp  CommandExecution.hpp  CommandExecutor.cpp  CommandExecutor.hpp  CommandManager.cpp  CommandManager.hpp  Common.hpp  Constants.hpp  Extensions.hpp  FramebuffersBuilder.cpp  GpuAllocator.cpp  GpuAllocator.hpp  GpuManager.cpp  GpuManager.hpp  GpuResourceManager.cpp  GpuResourceManager.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  PipelineBuilder.cpp  PipelineBuilder.hpp  RenderThread.cpp  RenderThread.hpp  Renderer.cpp  Renderer.hpp  RendererAllocator.cpp  RendererAllocator.hpp  RenderingDevice.cpp  RenderingDevice.hpp  RenderingFunctionsProxy.cpp  RenderingFunctionsProxy.hpp  RenderingLayoutsManager.cpp  RenderingLayoutsManager.hpp  RenderingManager.cpp  RenderingManager.hpp  RenderingObjectsAllocator.cpp  RenderingObjectsAllocator.hpp  RenderingObjectsFactory.cpp  RenderingObjectsFactory.hpp  RenderingResourceManager.cpp  RenderingResourceManager.hpp  (+13 more)
src/Rendering/Builders/: AttachmentBuilder.cpp  AttachmentBuilder.hpp  BufferObjectBuilder.cpp  BufferObjectBuilder.hpp  DescriptorPoolBuilder.cpp  DescriptorPoolBuilder.hpp  DescriptorSetLayoutBuilder.cpp  DescriptorSetLayoutBuilder.hpp  FramebufferBuilder.cpp  FramebufferBuilder.hpp  FramebuffersBuilder.cpp  (+17 more)
src/Resources/: CubeImageResource.cpp  CubeImageResource.hpp  ImageBaseResource.cpp  ImageBaseResource.hpp  ImageResource.cpp  ImageResource.hpp  Mesh.cpp  Mesh.hpp  MeshResource.cpp  MeshResource.hpp  Meshes.hpp  Resource.cpp  Resource.hpp  ResourceData.cpp  ResourceData.hpp  ResourceDatabase.cpp  ResourceDatabase.hpp  ResourceId.hpp  ResourceLoader.cpp  ResourceLoader.hpp  ResourceManager.cpp  ResourceManager.hpp  ResourceType.cpp  ResourceType.hpp  ShaderResource.cpp  ShaderResource.hpp  Texture.cpp  Texture.hpp  Vertex.hpp
src/Scene/: Camera.cpp  Camera.hpp  Light.cpp  Light.hpp  Meshes.hpp  Object.cpp  Object.hpp  Scene.cpp  Scene.hpp  SceneIterator.cpp  SceneIterator.hpp  SceneManager.cpp  SceneManager.hpp  SceneNode.cpp  SceneNode.hpp  Skybox.hpp  SkyboxMesh.hpp
src/System/: Window.cpp  Window.hpp
src/Types/: DataBuffer.hpp  LightSourceType.cpp  LightSourceType.hpp  ResourceType.cpp  ResourceType.hpp  Vertex.hpp
src/Utils/: CircularBuffer.hpp  DataStream.hpp  FromString.hpp  TopologicalSort.hpp
subprojects/: imgui.wrap
(+84 files in other folders)
